# ha-kassalapp

./: .editorconfig  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  validate.yaml
custom_components/ha_kassalapp/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  services.yaml  store.py  strings.json  todo.py
custom_components/ha_kassalapp/translations/: en.json
