[tool.poetry]
name = "ha-kassalapp"
version = "0.0.0"
description = ""
authors = ["Bendik R. Brenne <bendik@konstant.no>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
]
packages = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = "^2024.11.0"
kassalappy = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pylint = ">=3.1.0"
ruff = ">=0.3.2"

[tool.ruff]
src = ["custom_components/ha_kassalapp"]

[tool.ruff.lint]
ignore = [
  "ANN401",
  "D100",
  "D101",
  "D102",
  "D107",
  "D203",
  "D213",
  "ANN201",
  "ANN202",
  "ANN204",
  "TID252",
  "RUF012",

  # Formatter conflicts
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]
select = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
  "homeassistant",
]
combine-as-imports = true

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
  "abstract-method",
  "duplicate-code",
  "format",
  "unexpected-keyword-arg",
  "used-before-assignment",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
